--- a/public/css/wallet/wallet.css
+++ b/public/css/wallet/wallet.css
@@ -475,9 +475,8 @@ input::-webkit-inner-spin-button {
 	bottom: 0;
 	left: 0;
 	margin: auto;
-	width: .46rem;
-	height: .46rem;
-
+	width: .5rem;
+	padding-top: 5px;
 }
 .termBox .currency_title, .termBox .currency_number{display: block}
 .termBox .currency_title {
