--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -140,25 +140,38 @@
                 if (!isNaN(parseInt(sessionStorage.getItem('begin')))){
                     alread=parseInt(sessionStorage.getItem('begin'))
                     var bb = new Date().getTime()   //时间
+                    console.log(bb-alread)
                 }
                  if(bb-alread>=3600000){
-                     console.log(bb-alread>=3600000)
-                    $(".mode").show();
-                    $(".dialog-notice").show();
-                    document.body.style.overflow = 'hidden';
+                    console.log(bb-alread>=3600000)
+                    pop_up()
                     window.sessionStorage.clear()
                     alread = 0
                 }
             }
-
+          function pop_up(){
+                $(".mode").show();
+                $(".dialog-notice").show();
+                stop(".mode");
+                document.body.style.overflow = 'hidden';
+          }
             // //公告弹框 
-            // setTimeout(function (){
-            //     $(".mode").show();
-            //     $(".dialog-notice").show();
-            //     stop(".mode");
-            //     document.body.style.overflow = 'hidden';
-            // }, 1000)
-
+        // setTimeout(function (){
+        //         $(".mode").show();
+        //         $(".dialog-notice").show();
+        //         stop(".mode");
+        //         document.body.style.overflow = 'hidden';
+        //     },1000)
+            //第一次弹出公告
+            // console.log(parseInt(sessionStorage.getItem('begin')))
+            // console.log(isNaN(parseInt(sessionStorage.getItem('begin'))))
+            if (isNaN(parseInt(sessionStorage.getItem('begin')))){
+                console.log(isNaN(parseInt(sessionStorage.getItem('begin'))))
+                setTimeout(function (){
+                    pop_up()
+                    },1000)
+            }
+            
             //阻止冒泡，点击弹框禁止页面滚动
             $(".dialog-notice").bind("touchmove","touchstart",function(event){ 
                 event.stopPropagation();  
@@ -176,13 +189,7 @@
                 document.body.style.overflow = ''; //出现滚动条
                 /*当前时间戳=>写入localStorage中*/
 				window.localStorage.setItem('stamp',time());
-            })
-        
-            
-            
-             
-           
-            
+            })  
         })
 
     </script>
