--- a/application/admin/view/withdrawal_lists.html
+++ b/application/admin/view/withdrawal_lists.html
@@ -13,6 +13,8 @@
                 <th>状态</th>
                 <th>电子钱包地址</th>
                 <th>电子钱包二维码</th>
+                <th>提币时间</th>
+                <th>审核时间</th>
                 <th>操作</th>
             </tr>
             </thead>
@@ -35,6 +37,8 @@
                 </td>
                 <td>{$vo.wallet_addr}</td>
                 <td>{$vo.qrcode_addr}</td>                
+                <td>{$vo.create_time|date="Y-m-d H:i:s", ###}</td>                
+                <td>{if condition="$vo.check_time eq ''"}--{/else}{$vo.check_time|date="Y-m-d H:i:s", ###}{/if}</td>                
                 <td>
                 	<a href="{:url('admin/Withdrawal/detail',['id'=>$vo['id']])}" class="layui-btn layui-btn-normal layui-btn-sm">查看</a>
                     {if condition='$vo.status == 0'}
