--- a/application/admin/view/user_index.html
+++ b/application/admin/view/user_index.html
@@ -26,9 +26,9 @@
                     <th>当前用户上级</th>
                     <th>用户手机</th>
                     <th>状态</th>
-                    <!-- <th>发文免审</th> -->
+                    <th>推荐码</th>
                     <th>创建时间</th>
-                    <th>最后登录时间</th>
+                    <!-- <th>最后登录时间</th> -->
                     <!-- <th>最后登录IP</th> -->
                     <th>操作</th>
                 </tr>
@@ -41,6 +41,7 @@
                     <td>{$vo.pid|user}</td>
                     <td>{$vo.mobile}</td>
                     <td>{php}echo $vo['status']>=1 ? '启用' : '禁用';{/php}</td>
+                    <td>{$vo.promotion}</td>
                     <!-- <td align="center">
                         <input type="checkbox" lay-skin="switch" lay-text="免审|一般" lay-filter="switchdeveloper" value="{$vo['id']}" {php}echo $vo[ 'developer']==1 ? 'checked' : '';{/php}>
                         </a>
