--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -8,7 +8,7 @@
 		<script src="__PUBLIC__/js/public/rem.js"></script>
 		<link rel="stylesheet" href="__PUBLIC__/css/public/reset.css" />
 		<link rel="stylesheet" href="__PUBLIC__/css/public/base.css" />
-		<link rel="stylesheet" href="__PUBLIC__/css/home/present.css?v=2" />
+		<link rel="stylesheet" href="__PUBLIC__/css/home/present.css?v=1553582169" />
 		<link rel="stylesheet" href="__PUBLIC__/css/public/alertWrap.css" />
 		<link rel="stylesheet" href="__PUBLIC__/plugins/layui/css/layui.css" media="all" />
 	</head>
