--- a/application/index/view/my_edituser.html
+++ b/application/index/view/my_edituser.html
@@ -21,11 +21,11 @@
 					<div class="lj_sz_main">
 						<ul>
 							<li>
-								<p>邮箱:</p>
+								<p>邮箱：</p>
 								<input id="email" type="text" value="{$info.email}" />
 							</li>
 							<li>
-								<p>电话号码:</p>
+								<p>电话号码：</p>
 								<input id="mobile" type="text" value="{$info.mobile}" />
 							</li>
 							<!-- <a href="{:url('index/my/set_pass')}"></a> -->
