--- a/public/css/my/upIDCardNew.css
+++ b/public/css/my/upIDCardNew.css
@@ -15,6 +15,6 @@
 .uploadFile2{width: 100%;height: 0.6rem;position: absolute;top: 105%;left: 0;color: #000;background: #f5f5f5;text-align: center;line-height: 0.6rem;border-radius: 0.09rem;}
 
 .decideToSell{width: 100%;margin: 0 auto;margin-bottom: 1rem;}
-.decideToSell p{letter-spacing: 0.02rem; font-size: 0.3rem; background: #f5f5f5;color: #000;padding: 0.2rem 0;text-align: center;border-radius: 0.1rem;display: block;}
+.decideToSell p{letter-spacing: 0.02rem; font-size: 0.3rem; background: #304fef;color: #fff;padding: 0.2rem 0;text-align: center;border-radius: 0.1rem;display: block;}
 .preViewImg {display: none;}
 .preViewImg_show {display: block;}
