--- a/application/index/view/my_edituser.html
+++ b/application/index/view/my_edituser.html
@@ -5,7 +5,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	    <title>HTD</title>
 	    <script type="text/javascript" src="__PUBLIC__/js/public/rem.js" ></script>
-	    <link rel="stylesheet" href="__PUBLIC__/css/my/editPass.css" />
+	    <link rel="stylesheet" href="__PUBLIC__/css/my/editPass.css?v=4654654" />
 	    <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css" />
 	    <link rel="stylesheet" href="__PUBLIC__/css/public/base.css" />	</head>
 	<body>
