--- a/application/index/view/index_totalrevenue.html
+++ b/application/index/view/index_totalrevenue.html
@@ -22,10 +22,8 @@
         <div class="thead-zp">
             <ul>
                 <li>币种名称</li>
-                <!-- <li>币种数量</li> -->
-                <li>主流币</li>
-                <li>HTD</li>
-                <li>时间</li>
+                <li>收益数量</li>
+                <!-- <li>时间</li> -->
             </ul>
         </div>
         <div class="tbody-zp">
@@ -33,10 +31,7 @@
                 {foreach name="income" item="vo"}
                 <li>
                     <div class="name">{$vo.cu_id|cu_get}</div>
-                    <!-- <div class="number">{$vo.total_coin}</div> -->
-                    <div class="number">{$vo.main_coin}</div>
-                    <div class="price">{$vo.htd_coin}</div>
-                    <div class="total-price">{:date("Y-m-d",$vo.create_time)}</div>
+                    <div class="number">{$vo.total_num}</div>
                 </li>
                 {/foreach}
             </ul>
